# mini-engine-sdl

./: CMakeLists.txt  README.md  main.cpp
src/: Game.cpp  Hero.cpp  Hero.h
src/engine/: Animation.cpp  Animation.h  Texture.cpp
src/engine/Math/: Vector2D.h
src/engine/graphics/: Animation.cpp  Texture.cpp
src/engine/graphics/header/: Animation.h  Texture.h
src/engine/input/: InputHandler.cpp  Keyboard.cpp
src/engine/input/header/: Controller.h  InputHandler.h  Keyboard.h
src/header/: Game.h  Hero.h  SDL_Exception.h
